[REFACTOR] Review controller test